fixed visaul bug on navigation overlaping

--- a/assets/section-header.css
+++ b/assets/section-header.css
@@ -9,9 +9,9 @@
 
 .site-header__inner {
   display: grid;
-  grid-template-columns: auto minmax(0, 1fr) auto;
+  grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
   align-items: center;
-  gap: 2rem;
+  column-gap: 2rem;
 
   min-height: 5rem;
 }
